syntax = "proto3";

package grpc;

import "schema.proto";

service elixir {
    rpc viewClient (ClientViewRequest) returns (ClientViewResponse) {}
    rpc indexClient (ClientIndexRequest) returns (ClientIndexResponse) {}
}
